target/com/p4/p416/pp/gen/P416PPParser.java
// Generated from P416PPParser.g4 by ANTLR 4.5
package com.p4.p416.pp.gen;

import com.p4.p416.pp.gen.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class P416PPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT_BLOCK=1, COMMENT_LINE=2, NL_ESC=3, STRING=4, WS=5, NEWLINE=6, 
		PREPROCESS_BEGIN=7, PREPROCESS_INCLUDE=8, PREPROCESS_DEFINE=9, PREPROCESS_UNDEF=10, 
		PREPROCESS_IFDEF=11, PREPROCESS_IFNDEF=12, PREPROCESS_IF=13, PREPROCESS_ELSE=14, 
		PREPROCESS_ELIF=15, PREPROCESS_ENDIF=16, PREPROCESS_PRAGMA=17, PREPROCESS_ERROR=18, 
		DEFINED=19, ID=20, COMMA=21, PAREN_OPEN=22, PAREN_CLOSE=23, CHAR=24;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_preprocess = 2, RULE_ppId = 3, 
		RULE_ppChar = 4, RULE_ppChars = 5, RULE_ppCharsWithOutBegin = 6, RULE_ppCharsWithBegin = 7, 
		RULE_ppInclude = 8, RULE_ppPragma = 9, RULE_ppError = 10, RULE_ppUndef = 11, 
		RULE_ppDefineVar = 12, RULE_ppDefineFunc = 13, RULE_ppdfId = 14, RULE_ppdfiArguments = 15, 
		RULE_ppdfiArgument = 16, RULE_ppdfChars = 17, RULE_ppdfcId = 18, RULE_ppdfcNotId = 19, 
		RULE_ppIfStatement = 20, RULE_ppisIF = 21, RULE_ppisElif = 22, RULE_ppisElse = 23, 
		RULE_ppisEndif = 24, RULE_ppisIfDef = 25, RULE_ppisIfNdef = 26, RULE_ppisStatement = 27, 
		RULE_ppisElifElseEndif = 28, RULE_ppisElseEndif = 29;
	public static final String[] ruleNames = {
		"program", "statement", "preprocess", "ppId", "ppChar", "ppChars", "ppCharsWithOutBegin", 
		"ppCharsWithBegin", "ppInclude", "ppPragma", "ppError", "ppUndef", "ppDefineVar", 
		"ppDefineFunc", "ppdfId", "ppdfiArguments", "ppdfiArgument", "ppdfChars", 
		"ppdfcId", "ppdfcNotId", "ppIfStatement", "ppisIF", "ppisElif", "ppisElse", 
		"ppisEndif", "ppisIfDef", "ppisIfNdef", "ppisStatement", "ppisElifElseEndif", 
		"ppisElseEndif"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, "'#'", "'include'", "'define'", 
		"'undef'", "'ifdef'", "'ifndef'", "'if'", "'else'", "'elif'", "'endif'", 
		"'pragma'", "'error'", "'defined'", null, "','", "'('", "')'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "COMMENT_BLOCK", "COMMENT_LINE", "NL_ESC", "STRING", "WS", "NEWLINE", 
		"PREPROCESS_BEGIN", "PREPROCESS_INCLUDE", "PREPROCESS_DEFINE", "PREPROCESS_UNDEF", 
		"PREPROCESS_IFDEF", "PREPROCESS_IFNDEF", "PREPROCESS_IF", "PREPROCESS_ELSE", 
		"PREPROCESS_ELIF", "PREPROCESS_ENDIF", "PREPROCESS_PRAGMA", "PREPROCESS_ERROR", 
		"DEFINED", "ID", "COMMA", "PAREN_OPEN", "PAREN_CLOSE", "CHAR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "P416PPParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public P416PPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContextExt extendedContext;
		public TerminalNode EOF() { return getToken(P416PPParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof P416PPParserVisitor ) return ((P416PPParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMMENT_BLOCK) | (1L << COMMENT_LINE) | (1L << STRING) | (1L << WS) | (1L << NEWLINE) | (1L << PREPROCESS_BEGIN) | (1L << PREPROCESS_IF) | (1L << PREPROCESS_ELSE) | (1L << PREPROCESS_ENDIF) | (1L << PREPROCESS_ERROR) | (1L << DEFINED) | (1L << ID) | (1L << COMMA) | (1L << PAREN_OPEN) | (1L << PAREN_CLOSE) | (1L << CHAR))) != 0)) {
				{
				{
				setState(60);
				statement();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContextExt extendedContext;
		public PreprocessContext preprocess() {
			return getRuleContext(PreprocessContext.class,0);
		}
		public TerminalNode COMMENT_BLOCK() { return getToken(P416PPParser.COMMENT_BLOCK, 0); }
		public TerminalNode COMMENT_LINE() { return getToken(P416PPParser.COMMENT_LINE, 0); }
		public TerminalNode STRING() { return getToken(P416PPParser.STRING, 0); }
		public PpCharsContext ppChars() {
			return getRuleContext(PpCharsContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(P416PPParser.NEWLINE, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof P416PPParserVisitor ) return ((P416PPParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			setState(75);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				preprocess();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				_la = _input.LA(1);
				if ( !(_la==COMMENT_BLOCK || _la==COMMENT_LINE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(70);
				match(STRING);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(73);
				switch (_input.LA(1)) {
				case STRING:
				case WS:
				case PREPROCESS_BEGIN:
				case PREPROCESS_IF:
				case PREPROCESS_ELSE:
				case PREPROCESS_ENDIF:
				case PREPROCESS_ERROR:
				case DEFINED:
				case ID:
				case COMMA:
				case PAREN_OPEN:
				case PAREN_CLOSE:
				case CHAR:
					{
					setState(71);
					ppChars();
					}
					break;
				case NEWLINE:
					{
					setState(72);
					match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreprocessContext extends ParserRuleContext {
		public PreprocessContextExt extendedContext;
		public PpIncludeContext ppInclude() {
			return getRuleContext(PpIncludeContext.class,0);
		}
		public PpDefineFuncContext ppDefineFunc() {
			return getRuleContext(PpDefineFuncContext.class,0);
		}
		public PpDefineVarContext ppDefineVar() {
			return getRuleContext(PpDefineVarContext.class,0);
		}
		public PpUndefContext ppUndef() {
			return getRuleContext(PpUndefContext.class,0);
		}
		public PpPragmaContext ppPragma() {
			return getRuleContext(PpPragmaContext.class,0);
		}
		public PpErrorContext ppError() {
			return getRuleContext(PpErrorContext.class,0);
		}
		public PpIfStatementContext ppIfStatement() {
			return getRuleContext(PpIfStatementContext.class,0);
		}
		public PreprocessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preprocess; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).enterPreprocess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).exitPreprocess(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof P416PPParserVisitor ) return ((P416PPParserVisitor<? extends T>)visitor).visitPreprocess(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreprocessContext preprocess() throws RecognitionException {
		PreprocessContext _localctx = new PreprocessContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_preprocess);
		try {
			setState(84);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				ppInclude();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				ppDefineFunc();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				ppDefineVar();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				ppUndef();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(81);
				ppPragma();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(82);
				ppError();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(83);
				ppIfStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PpIdContext extends ParserRuleContext {
		public PpIdContextExt extendedContext;
		public TerminalNode ID() { return getToken(P416PPParser.ID, 0); }
		public PpIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ppId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).enterPpId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).exitPpId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof P416PPParserVisitor ) return ((P416PPParserVisitor<? extends T>)visitor).visitPpId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PpIdContext ppId() throws RecognitionException {
		PpIdContext _localctx = new PpIdContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ppId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PpCharContext extends ParserRuleContext {
		public PpCharContextExt extendedContext;
		public TerminalNode CHAR() { return getToken(P416PPParser.CHAR, 0); }
		public PpCharContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ppChar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).enterPpChar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).exitPpChar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof P416PPParserVisitor ) return ((P416PPParserVisitor<? extends T>)visitor).visitPpChar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PpCharContext ppChar() throws RecognitionException {
		PpCharContext _localctx = new PpCharContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ppChar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(CHAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PpCharsContext extends ParserRuleContext {
		public PpCharsContextExt extendedContext;
		public PpCharsWithOutBeginContext ppCharsWithOutBegin() {
			return getRuleContext(PpCharsWithOutBeginContext.class,0);
		}
		public PpCharsWithBeginContext ppCharsWithBegin() {
			return getRuleContext(PpCharsWithBeginContext.class,0);
		}
		public PpCharsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ppChars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).enterPpChars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).exitPpChars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof P416PPParserVisitor ) return ((P416PPParserVisitor<? extends T>)visitor).visitPpChars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PpCharsContext ppChars() throws RecognitionException {
		PpCharsContext _localctx = new PpCharsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ppChars);
		try {
			setState(92);
			switch (_input.LA(1)) {
			case STRING:
			case WS:
			case PREPROCESS_IF:
			case PREPROCESS_ELSE:
			case PREPROCESS_ENDIF:
			case PREPROCESS_ERROR:
			case DEFINED:
			case ID:
			case COMMA:
			case PAREN_OPEN:
			case PAREN_CLOSE:
			case CHAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				ppCharsWithOutBegin();
				}
				break;
			case PREPROCESS_BEGIN:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				ppCharsWithBegin();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PpCharsWithOutBeginContext extends ParserRuleContext {
		public PpCharsWithOutBeginContextExt extendedContext;
		public List<TerminalNode> STRING() { return getTokens(P416PPParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(P416PPParser.STRING, i);
		}
		public List<TerminalNode> WS() { return getTokens(P416PPParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(P416PPParser.WS, i);
		}
		public List<TerminalNode> DEFINED() { return getTokens(P416PPParser.DEFINED); }
		public TerminalNode DEFINED(int i) {
			return getToken(P416PPParser.DEFINED, i);
		}
		public List<PpIdContext> ppId() {
			return getRuleContexts(PpIdContext.class);
		}
		public PpIdContext ppId(int i) {
			return getRuleContext(PpIdContext.class,i);
		}
		public List<TerminalNode> PREPROCESS_ERROR() { return getTokens(P416PPParser.PREPROCESS_ERROR); }
		public TerminalNode PREPROCESS_ERROR(int i) {
			return getToken(P416PPParser.PREPROCESS_ERROR, i);
		}
		public List<TerminalNode> PREPROCESS_IF() { return getTokens(P416PPParser.PREPROCESS_IF); }
		public TerminalNode PREPROCESS_IF(int i) {
			return getToken(P416PPParser.PREPROCESS_IF, i);
		}
		public List<TerminalNode> PREPROCESS_ELSE() { return getTokens(P416PPParser.PREPROCESS_ELSE); }
		public TerminalNode PREPROCESS_ELSE(int i) {
			return getToken(P416PPParser.PREPROCESS_ELSE, i);
		}
		public List<TerminalNode> PREPROCESS_ENDIF() { return getTokens(P416PPParser.PREPROCESS_ENDIF); }
		public TerminalNode PREPROCESS_ENDIF(int i) {
			return getToken(P416PPParser.PREPROCESS_ENDIF, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(P416PPParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(P416PPParser.COMMA, i);
		}
		public List<TerminalNode> PAREN_OPEN() { return getTokens(P416PPParser.PAREN_OPEN); }
		public TerminalNode PAREN_OPEN(int i) {
			return getToken(P416PPParser.PAREN_OPEN, i);
		}
		public List<TerminalNode> PAREN_CLOSE() { return getTokens(P416PPParser.PAREN_CLOSE); }
		public TerminalNode PAREN_CLOSE(int i) {
			return getToken(P416PPParser.PAREN_CLOSE, i);
		}
		public List<PpCharContext> ppChar() {
			return getRuleContexts(PpCharContext.class);
		}
		public PpCharContext ppChar(int i) {
			return getRuleContext(PpCharContext.class,i);
		}
		public PpCharsWithOutBeginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ppCharsWithOutBegin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).enterPpCharsWithOutBegin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).exitPpCharsWithOutBegin(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof P416PPParserVisitor ) return ((P416PPParserVisitor<? extends T>)visitor).visitPpCharsWithOutBegin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PpCharsWithOutBeginContext ppCharsWithOutBegin() throws RecognitionException {
		PpCharsWithOutBeginContext _localctx = new PpCharsWithOutBeginContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ppCharsWithOutBegin);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(106);
					switch (_input.LA(1)) {
					case STRING:
						{
						setState(94);
						match(STRING);
						}
						break;
					case WS:
						{
						setState(95);
						match(WS);
						}
						break;
					case DEFINED:
						{
						setState(96);
						match(DEFINED);
						}
						break;
					case ID:
						{
						setState(97);
						ppId();
						}
						break;
					case PREPROCESS_ERROR:
						{
						setState(98);
						match(PREPROCESS_ERROR);
						}
						break;
					case PREPROCESS_IF:
						{
						setState(99);
						match(PREPROCESS_IF);
						}
						break;
					case PREPROCESS_ELSE:
						{
						setState(100);
						match(PREPROCESS_ELSE);
						}
						break;
					case PREPROCESS_ENDIF:
						{
						setState(101);
						match(PREPROCESS_ENDIF);
						}
						break;
					case COMMA:
						{
						setState(102);
						match(COMMA);
						}
						break;
					case PAREN_OPEN:
						{
						setState(103);
						match(PAREN_OPEN);
						}
						break;
					case PAREN_CLOSE:
						{
						setState(104);
						match(PAREN_CLOSE);
						}
						break;
					case CHAR:
						{
						setState(105);
						ppChar();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(108); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PpCharsWithBeginContext extends ParserRuleContext {
		public PpCharsWithBeginContextExt extendedContext;
		public TerminalNode PREPROCESS_BEGIN() { return getToken(P416PPParser.PREPROCESS_BEGIN, 0); }
		public List<TerminalNode> STRING() { return getTokens(P416PPParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(P416PPParser.STRING, i);
		}
		public List<TerminalNode> WS() { return getTokens(P416PPParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(P416PPParser.WS, i);
		}
		public List<TerminalNode> DEFINED() { return getTokens(P416PPParser.DEFINED); }
		public TerminalNode DEFINED(int i) {
			return getToken(P416PPParser.DEFINED, i);
		}
		public List<PpIdContext> ppId() {
			return getRuleContexts(PpIdContext.class);
		}
		public PpIdContext ppId(int i) {
			return getRuleContext(PpIdContext.class,i);
		}
		public List<TerminalNode> PREPROCESS_ERROR() { return getTokens(P416PPParser.PREPROCESS_ERROR); }
		public TerminalNode PREPROCESS_ERROR(int i) {
			return getToken(P416PPParser.PREPROCESS_ERROR, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(P416PPParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(P416PPParser.COMMA, i);
		}
		public List<TerminalNode> PAREN_OPEN() { return getTokens(P416PPParser.PAREN_OPEN); }
		public TerminalNode PAREN_OPEN(int i) {
			return getToken(P416PPParser.PAREN_OPEN, i);
		}
		public List<TerminalNode> PAREN_CLOSE() { return getTokens(P416PPParser.PAREN_CLOSE); }
		public TerminalNode PAREN_CLOSE(int i) {
			return getToken(P416PPParser.PAREN_CLOSE, i);
		}
		public List<PpCharContext> ppChar() {
			return getRuleContexts(PpCharContext.class);
		}
		public PpCharContext ppChar(int i) {
			return getRuleContext(PpCharContext.class,i);
		}
		public PpCharsWithBeginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ppCharsWithBegin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).enterPpCharsWithBegin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).exitPpCharsWithBegin(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof P416PPParserVisitor ) return ((P416PPParserVisitor<? extends T>)visitor).visitPpCharsWithBegin(this);
			else return visitor.visitChildren(this);
		}
	}
